@@ -4,6 +4,8 @@
 <div>Create or change [/template/error.ftl] in your webapp directory.Using[#noparse]${(stack.pop().exceptionStack)!}[/#noparse] to display exception stack.</div>
 <hr>
 <div>
+<pre>
 ${(stack.pop().exceptionStack)!}
+</pre>
 </div>
 [@b.foot/]
