@@ -2,7 +2,7 @@
 <li${tag.parameterString}>[#if tag.label??]<label class="title">[#if (tag.required!"")=="true"]<em class="required">*</em>[/#if]${tag.label}:</label>[/#if]
 <table><tr>
 <td>
-<select name="${tag.name1st}" multiple="multiple" size="${tag.size}" style="width:200px" onDblClick="JavaScript:bg.select.moveSelected(this.form['${tag.name1st}'], this.form['${tag.name2nd}'])" >
+<select name="${tag.name1st}" multiple="multiple" size="${tag.size}" style="width:250px" onDblClick="JavaScript:bg.select.moveSelected(this.form['${tag.name1st}'], this.form['${tag.name2nd}'])" >
 	[#list tag.items1st as item]
 	<option value="${(item[tag.keyName])!}">${(item[tag.valueName])!}</option>
 	[/#list]
@@ -13,7 +13,7 @@
 	<input style="vertical-align: middle;" onclick="JavaScript:bg.select.moveSelected(this.form['${tag.name2nd}'], this.form['${tag.name1st}'])" type="button" value="&lt;"/>
 </td>
 <td>
-<select name="${tag.name2nd}" multiple="multiple" size="${tag.size}" style="width:200px;" onDblClick="JavaScript:bg.select.moveSelected(this.form['${tag.name2nd}'], this.form['${tag.name1st}'])">
+<select name="${tag.name2nd}" multiple="multiple" size="${tag.size}" style="width:250px;" onDblClick="JavaScript:bg.select.moveSelected(this.form['${tag.name2nd}'], this.form['${tag.name1st}'])">
 	[#list tag.items2nd as item]
 	<option value="${(item[tag.keyName])!}">${(item[tag.valueName])!}</option>
 	[/#list]
