@@ -22,14 +22,21 @@
 		</select>
 	[/@]
 	[@b.textfield label="menu.entry"  name="menu.entry" value="${menu.entry!}" maxlength="100" /]
-	[@b.select2 label="使用资源" name1st="Resources" name2nd="SelectedResource" items1st=resources?sort_by("name") items2nd= menu.resources?sort_by("name") /]
+	[@b.select2 label="使用资源" name1st="Resources" name2nd="SelectedResource" items1st=resources?sort_by("name") items2nd= menu.resources?sort_by("name") option="id,description"/]
 	[@b.textfield label="common.remark"  name="menu.remark" maxlength="50" value="${menu.remark!}"/]
 	[@b.formfoot]
-		[@b.submit value="action.submit"/]&nbsp;
+		[@b.submit value="action.submit" onsubmit="validateMenu"/]&nbsp;
 		<input type="reset"  name="reset1" value="${b.text("action.reset")}" class="buttonStyle" />
 		[@b.redirectParams/]
 		<input type="hidden" name="menu.id" value="${menu.id!}" />
 		<input type="hidden" name="resourceIds" />
 	[/@]
 [/@]
+<script  type="text/javascript">
+   function validateMenu(form){
+       form['resourceIds'].value = bg.select.getValues(form.SelectedResource);
+       return true;
+   }
+</script>
+
 [@b.foot/]
