@@ -26,6 +26,7 @@
 		[/#list]
 		</select>
 		</td>
+		<td></td>
 		<td>
 		<select  name="resource.enabled" style="width:95%;" onchange="this.form.submit()">
 			<option value="" [#if (Parameters['resource.enabled']!"")=""]selected="selected"[/#if]>..</option>
@@ -37,8 +38,9 @@
 	[@b.row]
 		[@b.boxcol/]
 		[@b.col  width="20%" property="title" title="标题" ][@b.a href="resource!info?resource.id=${resource.id}"]${(resource.title)!}[/@][/@]
-		[@b.col  width="55%" property="name" align="left" title="名称"]<span title="${resource.remark!}">${resource.name!}</span>[/@]
+		[@b.col  width="40%" property="name" align="left" title="名称"]<span title="${resource.remark!}">${resource.name!}</span>[/@]
 		[@b.col  width="10%" property="scope" title="可见范围"][@resourceScope resource.scope/][/@]
+		[@b.col  width="15%"title="适用用户"][#list resource.categories as ca]${ca.name}[#if ca_has_next],[/#if][/#list][/@]
 		[@b.col  width="10%" property="enabled" title="状态" sortable="false"][@enableInfo resource.enabled/][/@]
 	[/@]
 [/@]
